# MAE

./: .gitignore  README.md  pyproject.toml
src/MAE/: ViT.py  dataclass.py  embedding.py  loss.py  lr_sched.py  model.py  pretrain.py  train.py  trainer.py  utils.py  weight_init.py
src/MAE/datasets/: dataset.py  slice_builders.py  transformation.py  utils.py
src/MAE/network/: ViT.py  config.py  drop.py  embedding.py  logging.py  loss.py  model.py  trainer.py  utils.py  weight_init.py
