[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MAE"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
preview = true

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.12"
reportDuplicateImport = "error"
reportImplicitStringConcatenation = "error"
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportMatchNotExhaustive = "error"
reportMissingSuperCall = "error"
reportMissingTypeArgument = true
reportMissingTypeStubs = "warning"
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = "error"
reportUnknownMemberType = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCallResult = "error"
reportUnusedClass = "error"
reportUnusedExpression = "error"
reportUnusedFunction = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = false
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
arbitrary_types_allowed = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "assert_never\\("]